// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #ffffff;
  border-color: #c9cacc;
  border-style: solid;
  border-width: 2px;
  box-shadow: 0 3px 4px -3px rgba(0,0,0,0.5),0 0 2px -1px rgba(0,0,0,0.4);
}

.c1.direction-row {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1.direction-column {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.direction-column > * {
  margin-bottom: .8rem;
}

.c1.direction-row > * {
  margin-right: .8rem;
}

.c1.direction-column :last-child,
.c1.direction-row :last-child {
  margin: 0;
}

.c1.direction-column.first-shape-square {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c1.direction-column.last-shape-square {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c1.direction-row.first-shape-square {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c1.direction-row.last-shape-square {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<span
  className="c0"
>
  <div
    className="direction-column first-shape- last-shape- first-size- last-size- c1"
  >
    <div
      inGroup={true}
    />
  </div>
</span>
`;

exports[`When using snapshots Should render with the direction prop 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #ffffff;
  border-color: #c9cacc;
  border-style: solid;
  border-width: 2px;
  box-shadow: 0 3px 4px -3px rgba(0,0,0,0.5),0 0 2px -1px rgba(0,0,0,0.4);
}

.c1.direction-row {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1.direction-column {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.direction-column > * {
  margin-bottom: .8rem;
}

.c1.direction-row > * {
  margin-right: .8rem;
}

.c1.direction-column :last-child,
.c1.direction-row :last-child {
  margin: 0;
}

.c1.direction-column.first-shape-square {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c1.direction-column.last-shape-square {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c1.direction-row.first-shape-square {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c1.direction-row.last-shape-square {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<span
  className="c0"
>
  <div
    className="direction-column first-shape- last-shape- first-size- last-size- c1"
  >
    <div
      inGroup={true}
    />
  </div>
</span>
`;

exports[`When using snapshots Should render with the shape prop 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #ffffff;
  border-color: #c9cacc;
  border-style: solid;
  border-width: 2px;
  box-shadow: 0 3px 4px -3px rgba(0,0,0,0.5),0 0 2px -1px rgba(0,0,0,0.4);
}

.c1.direction-row {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1.direction-column {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.direction-column > * {
  margin-bottom: .8rem;
}

.c1.direction-row > * {
  margin-right: .8rem;
}

.c1.direction-column :last-child,
.c1.direction-row :last-child {
  margin: 0;
}

.c1.direction-column.first-shape-square {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c1.direction-column.last-shape-square {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c1.direction-row.first-shape-square {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c1.direction-row.last-shape-square {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

<span
  className="c0"
>
  <div
    className="direction-column first-shape-square last-shape-square first-size- last-size- c1"
  >
    <div
      inGroup={true}
      shape="square"
    />
  </div>
</span>
`;

exports[`When using snapshots Should render with the size prop 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: #ffffff;
  border-color: #c9cacc;
  border-style: solid;
  border-width: 2px;
  box-shadow: 0 3px 4px -3px rgba(0,0,0,0.5),0 0 2px -1px rgba(0,0,0,0.4);
}

.c1.direction-row {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1.direction-column {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1.direction-column > * {
  margin-bottom: .8rem;
}

.c1.direction-row > * {
  margin-right: .8rem;
}

.c1.direction-column :last-child,
.c1.direction-row :last-child {
  margin: 0;
}

.c1.direction-column.first-shape-square {
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c1.direction-column.last-shape-square {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c1.direction-column.first-shape-round {
  border-top-left-radius: 2.4rem;
  border-top-right-radius: 2.4rem;
}

.c1.direction-column.last-shape-round {
  border-bottom-left-radius: 2.4rem;
  border-bottom-right-radius: 2.4rem;
}

.c1.direction-row.first-shape-square {
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.c1.direction-row.last-shape-square {
  border-top-right-radius: 4px;
  border-bottom-right-radius: 4px;
}

.c1.direction-row.first-shape-round {
  border-top-left-radius: 2.4rem;
  border-bottom-left-radius: 2.4rem;
}

.c1.direction-row.last-shape-round {
  border-top-right-radius: 2.4rem;
  border-bottom-right-radius: 2.4rem;
}

<span
  className="c0"
>
  <div
    className="direction-column first-shape- last-shape- first-size-xs last-size-xs c1"
  >
    <div
      inGroup={true}
      size="xs"
    />
  </div>
</span>
`;
